Next Release
============

Fixes
-----
- Add missing iris.cube import in helpers/cubes (PR #102)

Features
--------
- Convert cubes with unit kg m-2 s-1 to kg m-2 day-1 (PR #99)
- Show optional reference value in timeseries plots (PR #100)
- Update supported Python versions (PR #103)
- Add a new processing task NemoGlobalSumYearMeanTimeseries (PR #106)

Internal changes
----------------
- Streamline unit conversions for cubes (PR #99)
- Add a new NemoTimeseries parent class (PR #106)
- Improve global aggregation in NEMO timeseries tasks: Iris now changes units automatically when necessary (PR #106)


ScriptEngine Tasks for EC-Earth 0.6.3
======================================

Internal changes
----------------
- Base package build on pyproject.toml (#93)


ScriptEngine Tasks for EC-Earth 0.6.2
======================================

Fixes
-----
- Add minimal pyproject.toml to allow for conda packaging


ScriptEngine Tasks for EC-Earth 0.6.1
======================================

Fixes
-----
- Create the correct anchors for Redmine TOC (#80/PR#87)


ScriptEngine Tasks for EC-Earth 0.6.0
======================================

Features
--------
- Streamline use of title() and capitalize() (#78)
- TOC Support in Markdown/Redmine templates (#71)
- Linear combination of variables (#64)

Fixes
-----
- Fix duration to restore 2 FPS (#85 and #82)
- Fix segfault problem with HDF5/Python3.7 in tests  (#84)
- Fix: GIFs now loop again (#77)
- Replace Path.with_stem for Python<3.9 (#66)

Internal changes
----------------
- Rename url->server_url and base_url->issue_url (#79)
- Fix #72: Release pipeline (#73)
- Refactor: ImageIO dependency (#70)
- Refactor diskusage task and tests (#69)


ScriptEngine Tasks for EC-Earth 0.5.0
======================================

...


ScriptEngine Tasks for EC-Earth 0.2.0 (45ef712, Fri 11 Sep 11:33:11 CEST 2020)
======================================

- First comprehensive set of EC-Earth4 monitoring tasks